Source/WebCore/dom/VisitedLinkState.cpp
@@ -33,6 +33,7 @@
 #include "Frame.h"
 #include "HTMLAnchorElement.h"
 #include "Page.h"
+#include "SVGAElement.h"
 #include "SVGNames.h"
 #include "VisitedLinkStore.h"
 #include "XLinkNames.h"
@@ -44,12 +45,12 @@ using namespace HTMLNames;
 inline static const AtomicString* linkAttribute(const Element& element)
 {
     if (!element.isLink())
-        return 0;
+        return nullptr;
     if (element.isHTMLElement())
         return &element.attributeWithoutSynchronization(HTMLNames::hrefAttr);
     if (element.isSVGElement())
         return &element.getAttribute(SVGNames::hrefAttr, XLinkNames::hrefAttr);
-    return 0;
+    return nullptr;
 }
 
 VisitedLinkState::VisitedLinkState(Document& document)
@@ -67,13 +68,13 @@ void VisitedLinkState::invalidateStyleForAllLinks()
     }
 }
 
-inline static SharedStringHash linkHashForElement(Document& document, const Element& element)
+inline static Optional<SharedStringHash> linkHashForElement(const Element& element)
 {
     if (is<HTMLAnchorElement>(element))
         return downcast<HTMLAnchorElement>(element).visitedLinkHash();
-    if (const AtomicString* attribute = linkAttribute(element))
-        return computeVisitedLinkHash(document.baseURL(), *attribute);
-    return 0;
+    if (is<SVGAElement>(element))
+        return downcast<SVGAElement>(element).visitedLinkHash();
+    return WTF::nullopt;
 }
 
 void VisitedLinkState::invalidateStyleForLink(SharedStringHash linkHash)
@@ -81,7 +82,7 @@ void VisitedLinkState::invalidateStyleForLink(SharedStringHash linkHash)
     if (!m_linksCheckedForVisitedState.contains(linkHash))
         return;
     for (auto& element : descendantsOfType<Element>(m_document)) {
-        if (linkHashForElement(m_document, element) == linkHash)
+        if (element.isLink() && linkHashForElement(element) == linkHash)
             element.invalidateStyleForSubtree();
     }
 }
@@ -94,19 +95,17 @@ InsideLink VisitedLinkState::determineLinkStateSlowCase(const Element& element)
     if (!attribute || attribute->isNull())
         return InsideLink::NotInside;
 
-    // An empty href refers to the document itself which is always visited. It is useful to check this explicitly so
+    auto hashIfFound = linkHashForElement(element);
+
+    if (!hashIfFound)
+        return attribute->isEmpty() ? InsideLink::InsideVisited : InsideLink::InsideUnvisited;
+
+    auto hash = *hashIfFound;
+
+    // An empty href (hash==0) refers to the document itself which is always visited. It is useful to check this explicitly so
     // that visited links can be tested in platform independent manner, without explicit support in the test harness.
-    if (attribute->isEmpty())
-        return InsideLink::InsideVisited;
-
-    SharedStringHash hash;
-    if (is<HTMLAnchorElement>(element))
-        hash = downcast<HTMLAnchorElement>(element).visitedLinkHash();
-    else
-        hash = computeVisitedLinkHash(element.document().baseURL(), *attribute);
-
     if (!hash)
-        return InsideLink::InsideUnvisited;
+        return InsideLink::InsideVisited;
 
     Frame* frame = element.document().frame();
     if (!frame)
